<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_documents"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_aadhar_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/aadhar_card"
            android:textColor="@color/light_gray"
            android:textSize="18dp"
            app:layout_constraintEnd_toStartOf="@id/img_aadhar_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading" />

        <ImageView
            android:id="@+id/img_aadhar_check"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_check_green"
            app:layout_constraintTop_toTopOf="@id/tv_aadhar_card"
            app:layout_constraintBottom_toBottomOf="@id/tv_aadhar_card"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_aadhar_card" />

        <TextView
            android:id="@+id/tv_driving_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/driving_license"
            android:textColor="@color/light_gray"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_dl_check"
            app:layout_constraintTop_toBottomOf="@id/view_1" />

        <ImageView
            android:id="@+id/img_dl_check"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_cancelled"
            app:layout_constraintTop_toTopOf="@id/tv_driving_license"
            app:layout_constraintBottom_toBottomOf="@id/tv_driving_license"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_driving_license" />


        <TextView
            android:id="@+id/tv_vehicle_rc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:paddingVertical="8dp"
            android:text="@string/registration_certificate"
            android:textColor="@color/light_gray"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_rc_check"
            app:layout_constraintTop_toBottomOf="@id/view_2" />

        <ImageView
            android:id="@+id/img_rc_check"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_cancelled"
            app:layout_constraintTop_toTopOf="@id/tv_vehicle_rc"
            app:layout_constraintBottom_toBottomOf="@id/tv_vehicle_rc"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_vehicle_rc" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/white_rectangle_100"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register_text"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>





